--- a/templates/customer/allBookings.html
+++ b/templates/customer/allBookings.html
@@ -92,7 +92,7 @@
         <section class="section">
             <div class="container">
                 {% if booking_list == None %}
-                <div>(to be replaced) No bookings</div>
+                <div>Nothing to show here. Start your first tour with Tourisit today!</div>
                 {% else %}
                 {% for item in booking_list %}
                 {% set list = listings[loop.index0] %}
