--- a/templates/tourGuides/dashboard.html
+++ b/templates/tourGuides/dashboard.html
@@ -25,8 +25,8 @@
             <div class="level">
                 <div class="level-right">
                     <div class="level-item">
-                        <button type="button" class="button is-success">
-                            <i class="fas fa-download"></i>&ensp;Download report for this month
+                        <button onclick="$('#reportGenerationModal').fadeIn('fast');" type="button" class="button is-success">
+                            <i class="fas fa-download"></i>&ensp;Generate new report
                         </button>
                     </div>
                 </div>
@@ -132,12 +132,12 @@
         </div>
     </section>
 
-    <div id="reportGenerationModal" class="modal is-active">
+    <div id="reportGenerationModal" class="modal is-active" style="display: none;">
         <div class="modal-background"></div>
         <div class="modal-card box" style="padding: 3em;">
             <p class="title is-3 has-text-weight-bold has-text-centered">Generate Report</p>
             <p class="mb-3">Enter month and year of report to generate.<br>You may leave this blank to get a full report for your entire account.</p>
-            <form method="POST" action="{{ url_for('sellerDashboard') }}">
+            <form method="POST" action="{{ url_for('sellerDashboard') }}" target="_blank">
                 {{ form.csrf_token }}
             <div class="field is-grouped">
                 <p class="control is-expanded">
@@ -147,7 +147,7 @@
                     </span> -->
                 </p>
                 <p class="control">
-                  <button class="button is-primary" type="submit">
+                  <button onclick="$('#reportGenerationModal').fadeOut('fast');$('#reportGenerationModalResult').fadeIn('fast');" class="button is-primary" type="submit">
                     <i class="fas fa-arrow-right"></i>&nbsp;Generate
                   </button>
                 </p>
@@ -155,6 +155,17 @@
             </form>
             <a onclick="$('#reportGenerationModal').fadeOut('fast');" class="button is-light is-fullwidth mt-3"><i
                     class="fas fa-times"></i>&ensp;Cancel</a>
+        </div>
+    </div>
+
+    <div id="reportGenerationModalResult" class="modal is-active" style="display: none;">
+        <div class="modal-background"></div>
+        <div class="modal-card box" style="padding: 3em;">
+            <p class="title is-3 has-text-weight-bold has-text-centered">Success</p>
+            <p class="subtitle has-text-centered">Report has been downloaded to your device.</p>
+
+            <a onclick="$('#reportGenerationModalResult').fadeOut('fast');" class="button is-light is-fullwidth mt-3"><i
+                    class="fas fa-times"></i>&ensp;Close</a>
         </div>
     </div>
 
