minor UI changes

--- a/templates/customer/allBookings.html
+++ b/templates/customer/allBookings.html
@@ -91,7 +91,7 @@
 
         <section class="section">
             <div class="container">
-                {% if booking_list == None %}
+                {% if booking_list == [] %}
                 <div>Nothing to show here. Start your first tour with Tourisit today!</div>
                 {% else %}
                 {% for item in booking_list %}
