chnage placeholder for customer review

--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -108,7 +108,7 @@
                         <div class="field">
                             <label class="label" for="review">Leave a review</label>
                             <div class="control">
-                                {{ form.review_text(placeholder="How were they as a customer?",
+                                {{ form.review_text(placeholder="Customer was friendly and kind..",
                                 id="review", class="textarea") }}
                             </div>
                         </div>
