--- a/templates/setting.html
+++ b/templates/setting.html
@@ -111,11 +111,11 @@
                                 </ul>
                             </div>
                         </div>
-                        <h1 class="is-size-4 has-text-left has-text-weight-bold pt-3 pb-2">Social Networks</h1>
+                        <h1 class="is-size-4 has-text-left has-text-weight-bold pt-3 pb-2">Social Networks (optional)</h1>
                         <div class="field">
                             <label class="label" for="name">Facebook</label>
                             <div class="control">
-                                {{ form.fb(id="fb", type="text", class="input", placeholder="", value=user.socialmedia["fb"]) }}
+                                {{ form.fb(id="fb", type="text", class="input", placeholder="e.g. www.facebook.com/Tourisit", value=user.socialmedia["fb"]) }}
                                 <ul>
                                     {% for error in form.fb.errors %}
                                         <li class="has-text-danger"> {{ error }}</li>
@@ -126,7 +126,7 @@
                         <div class="field">
                             <label class="label" for="insta">Instagram</label>
                             <div class="control">
-                                {{ form.insta(id="insta", type="text", class="input", placeholder="", value=user.socialmedia["insta"]) }}
+                                {{ form.insta(id="insta", type="text", class="input", placeholder="e.g. www.instagram.com/Tourisit", value=user.socialmedia["insta"]) }}
                                 <ul>
                                     {% for error in form.insta.errors %}
                                         <li class="has-text-danger"> {{ error }}</li>
@@ -137,7 +137,7 @@
                         <div class="field">
                             <label class="label" for="linkedin">LinkedIn</label>
                             <div class="control">
-                                {{ form.linkedin(id="linkedin", type="text", class="input", placeholder="", value=user.socialmedia["linkedin"]) }}
+                                {{ form.linkedin(id="linkedin", type="text", class="input", placeholder="e.g. www.linkedin.com/in/Tourisit", value=user.socialmedia["linkedin"]) }}
                                 <ul>
                                     {% for error in form.linkedin.errors %}
                                         <li class="has-text-danger"> {{ error }}</li>
