--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -101,6 +101,8 @@
                                 class="fas fa-comment"></i>&ensp;Chat with Guide</a>
                         
                         {% endif %}
+
+                            <!-- <p>Insert date created here</p> -->
                     </div>
                 </div>
             </div>
