--- a/templates/profile.html
+++ b/templates/profile.html
@@ -72,8 +72,15 @@
                             </form>
                         </div>
                     {% endif %}
+
                 </div>
+
             </div>
         </div>
     </section>
+
+    <div class="columns is-multiline">
+        {% include 'components/listing-card.html' %}
+    </div>
+    
 {% endblock %}
