--- a/templates/tourGuides/dashboard.html
+++ b/templates/tourGuides/dashboard.html
@@ -190,7 +190,7 @@
                 labels: recent_months.reverse(),
                 datasets: [{
                     label: 'Earnings',
-                    data: [533, 640, 780, 644, 743, 768],
+                    data: [{%for i in earning_data %} {{i["total"]}}, {%endfor%}],
                     backgroundColor: 'rgba(0, 145, 189, 0.2)',
                     borderWidth: 0
                 }]
