Fix margin of listing cards

--- a/templates/components/listing-card-bookings.html
+++ b/templates/components/listing-card-bookings.html
@@ -1,4 +1,4 @@
-<a class="listing-card-a pb-5" href="/bookings/{{ item['_id'] }}">
+<a class="listing-card-a mb-5" href="/bookings/{{ item['_id'] }}">
     <div class="box listing-card p-6" style="background-image: url('data:image/jpeg;base64, {{ list.tour_img }}')">
         <div class="listing-card-blur"></div>
         {% if 1 <= item.process_step <= 4 %}
