--- a/templates/components/listing-card-home.html
+++ b/templates/components/listing-card-home.html
@@ -1,5 +1,5 @@
 <div class="column is-half">
-    <a class="listing-card-a pb-5" href="/discover/{{ item['_id'] }}">
+    <a class="listing-card-a mb-5" href="/discover/{{ item['_id'] }}">
         <div class="box listing-card p-6"
              style="background-image: url('data:image/jpeg;base64, {{ item['tour_img'] }}')">
             <div class="listing-card-blur"></div>
